responsive buttons & prevent layout shift for message

--- a/package/src/steps/SwapOverviewView/SwapOverviewView.module.css
+++ b/package/src/steps/SwapOverviewView/SwapOverviewView.module.css
@@ -12,6 +12,8 @@
   font-style: normal;
   font-weight: 400;
   line-height: 12px;
+  margin: 8px 0;
+  height: 12px;
 }
 
 .heading {
@@ -22,7 +24,14 @@
   width: 100%;
   margin-bottom: 40px;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   margin-top: auto;
   gap: 18px;
+}
+
+@media (min-width: 375px) {
+  .buttonContainer {
+    flex-direction: row;
+  }
 }
